--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,28 @@ body {
   margin-top: 2rem;
 }
 
+.page-selector {
+  text-align: center;
+}
+
+.page-selector button {
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  border-radius: 50%;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.3);
+  font-size: 2rem;
+  cursor: pointer;
+  margin: 0 10px;
+  transition: all 0.1s ease-in-out;
+}
+
+.page-selector button:hover {
+  transform: scale(1.1);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
 .pokemon-list {
   list-style-type: none;
   display: flex;
@@ -55,7 +77,7 @@ body {
   justify-content: center;
   flex-wrap: wrap;
   padding: 0 40px;
-  margin: 20px 0;
+  margin: 0;
 }
 
 .pokemon-card {
