--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,17 @@
   padding: 0;
 }
 
+html {
+  overscroll-behavior: none;
+  overflow: hidden;
+  height: 100%;
+}
+
 body {
-  background-color: #b9b9b9;
-  margin: 0;
-  padding: 0;
+  overflow: auto;
+  height: 100%;
+  background: url("./assets/img/seamless-galaxy.jpg");
+  background-color: #00072c;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -58,7 +65,8 @@ body {
   text-align: center;
   border-radius: 50%;
   border: none;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
   font-size: 2rem;
   cursor: pointer;
   margin: 0 10px;
@@ -67,7 +75,7 @@ body {
 
 .page-selector button:hover {
   transform: scale(1.1);
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .pokemon-list {
