--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,15 @@
   }
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -107,6 +116,7 @@ body {
   flex-wrap: wrap;
   padding: 0 40px;
   margin: 0;
+  animation: fadeIn 1s ease-in-out;
 }
 
 .pokemon-card {
@@ -206,6 +216,8 @@ body {
   box-shadow: 0 0 5px 1px rgb(154 247 242 / 60%);
   border: 2px solid rgba(154, 247, 242, 0.8);
   cursor: pointer;
+  box-sizing: border-box;
+  min-width: 600px;
 }
 
 .load-more:hover {
