--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
-@import url("http://fonts.cdnfonts.com/css/pokemon-solid");
+/* @import url("http://fonts.cdnfonts.com/css/pokemon-solid"); */
+
+@font-face {
+  font-family: PokemonSolid;
+  src: url("./assets/fonts/PokemonSolid.ttf");
+}
 
 @keyframes rotation {
   from {
@@ -32,12 +37,6 @@ html {
 body {
   overflow: auto;
   height: 100%;
-  /* background: url("./assets/img/seamless-galaxy.jpg"); */
-  /* background-color: #00072c; */
-
-  /* background-color: #5100cc;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%230bcfb9' fill-opacity='0.44' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E"); */
-
   background-color: #1f024a;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23006ced' fill-opacity='0.44'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -74,11 +73,11 @@ body {
 .loading-screen img {
   max-width: 200px;
   max-height: 200px;
-  animation: rotation 1.5s infinite linear;
+  /* animation: rotation 1.5s infinite linear; */
 }
 
 .loading-screen h1 {
-  font-family: "Pokemon Solid", sans-serif;
+  font-family: "PokemonSolid", sans-serif;
   font-weight: 400;
   color: #ffcb05;
   text-shadow: 0 0 10px #003a70, 0 0 10px #003a70;
@@ -144,7 +143,7 @@ body {
 }
 
 .pokemon-id {
-  font-family: "Pokemon Solid", sans-serif;
+  font-family: "PokemonSolid", sans-serif;
   font-size: 1.4rem;
   font-weight: 400;
   color: #ffcb05;
@@ -183,7 +182,7 @@ body {
 }
 
 .pokemon-card h3 {
-  font-family: "Pokemon Solid", sans-serif;
+  font-family: "PokemonSolid", sans-serif;
   font-size: 1.6rem;
   font-weight: 400;
   color: #ffcb05;
