--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,7 @@ body {
   margin-top: 2rem;
 }
 
-.page-selector {
+/* .page-selector {
   text-align: center;
 }
 
@@ -108,6 +108,48 @@ body {
 .page-selector button:hover {
   transform: scale(1.1);
   background-color: rgba(0, 0, 0, 0.5);
+} */
+
+.filters-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.filter-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 20px;
+}
+
+.filter-item label {
+  font-size: 1.3rem;
+  margin-top: 15px;
+  margin-bottom: 8px;
+}
+
+.filter-item select,
+.filter-item input {
+  box-sizing: border-box;
+  width: 200px;
+  padding: 5px 5px;
+  border: 1px solid #6e6e6e;
+  border-radius: 5px;
+  font-weight: 700;
+}
+
+.filter-item select {
+  cursor: pointer;
+}
+
+.filter-item select:hover,
+.filter-item select:focus,
+.filter-item input:hover,
+.filter-item input:focus {
+  outline: none;
+  border: 1px solid #5f5f5f;
 }
 
 .list-container {
@@ -199,10 +241,12 @@ body {
 
 .type-badge {
   color: white;
-  padding: 2px 7px;
+  padding: 3px 8px;
   border-radius: 15px;
   border: 1px solid black;
   margin: 0 4px;
+  font-weight: 700;
+  box-shadow: inset 0px 0px 4px #3c3636;
 }
 
 .load-more {
