--- a/src/App.css
+++ b/src/App.css
@@ -37,8 +37,12 @@ html {
 body {
   overflow: auto;
   height: 100%;
-  background-color: #1f024a;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23006ced' fill-opacity='0.44'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  /* background-color: #1f024a;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23006ced' fill-opacity='0.44'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
+  background-color: #e3e3e3;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%2388868a' fill-opacity='0.3' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+  /* background-color: #222222;
+  background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23909090' fill-opacity='0.15' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E"); */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -64,7 +68,21 @@ body {
 .pokemon-text {
   font-family: "PokemonSolid", sans-serif;
   color: #ffcb05;
-  text-shadow: 0 0 10px #003a70, 0 0 10px #003a70;
+  /* text-shadow: 0 0 10px #003a70, 0 0 10px #003a70; */
+
+  text-shadow: rgb(0, 58, 112) 2px 0px 0px,
+    rgb(0, 58, 112) 1.75517px 0.958851px 0px,
+    rgb(0, 58, 112) 1.0806px 1.68294px 0px,
+    rgb(0, 58, 112) 0.141474px 1.99499px 0px,
+    rgb(0, 58, 112) -0.832294px 1.81859px 0px,
+    rgb(0, 58, 112) -1.60229px 1.19694px 0px,
+    rgb(0, 58, 112) -1.97998px 0.28224px 0px,
+    rgb(0, 58, 112) -1.87291px -0.701566px 0px,
+    rgb(0, 58, 112) -1.30729px -1.5136px 0px,
+    rgb(0, 58, 112) -0.421592px -1.95506px 0px,
+    rgb(0, 58, 112) 0.567324px -1.91785px 0px,
+    rgb(0, 58, 112) 1.41734px -1.41108px 0px,
+    rgb(0, 58, 112) 1.92034px -0.558831px 0px;
   letter-spacing: 1px;
 }
 
@@ -116,6 +134,92 @@ body {
   font-size: 2.5rem;
   margin-top: 30px;
   letter-spacing: 5px;
+}
+
+.page-heading h1 {
+  text-shadow: rgb(0, 58, 112) 4px 0px 0px,
+    rgb(0, 58, 112) 3.87565px 0.989616px 0px,
+    rgb(0, 58, 112) 3.51033px 1.9177px 0px,
+    rgb(0, 58, 112) 2.92676px 2.72656px 0px,
+    rgb(0, 58, 112) 2.16121px 3.36588px 0px,
+    rgb(0, 58, 112) 1.26129px 3.79594px 0px,
+    rgb(0, 58, 112) 0.282949px 3.98998px 0px,
+    rgb(0, 58, 112) -0.712984px 3.93594px 0px,
+    rgb(0, 58, 112) -1.66459px 3.63719px 0px,
+    rgb(0, 58, 112) -2.51269px 3.11229px 0px,
+    rgb(0, 58, 112) -3.20457px 2.39389px 0px,
+    rgb(0, 58, 112) -3.69721px 1.52664px 0px,
+    rgb(0, 58, 112) -3.95997px 0.56448px 0px,
+    rgb(0, 58, 112) -3.97652px -0.432781px 0px,
+    rgb(0, 58, 112) -3.74583px -1.40313px 0px,
+    rgb(0, 58, 112) -3.28224px -2.28625px 0px,
+    rgb(0, 58, 112) -2.61457px -3.02721px 0px,
+    rgb(0, 58, 112) -1.78435px -3.57996px 0px,
+    rgb(0, 58, 112) -0.843183px -3.91012px 0px,
+    rgb(0, 58, 112) 0.150409px -3.99717px 0px,
+    rgb(0, 58, 112) 1.13465px -3.8357px 0px,
+    rgb(0, 58, 112) 2.04834px -3.43574px 0px,
+    rgb(0, 58, 112) 2.83468px -2.82216px 0px,
+    rgb(0, 58, 112) 3.44477px -2.03312px 0px,
+    rgb(0, 58, 112) 3.84068px -1.11766px 0px,
+    rgb(0, 58, 112) 3.9978px -0.132717px 0px;
+
+  text-shadow: rgb(61, 125, 202) 2px 0px 0px,
+    rgb(61, 125, 202) 1.75517px 0.958851px 0px,
+    rgb(61, 125, 202) 1.0806px 1.68294px 0px,
+    rgb(61, 125, 202) 0.141474px 1.99499px 0px,
+    rgb(61, 125, 202) -0.832294px 1.81859px 0px,
+    rgb(61, 125, 202) -1.60229px 1.19694px 0px,
+    rgb(61, 125, 202) -1.97998px 0.28224px 0px,
+    rgb(61, 125, 202) -1.87291px -0.701566px 0px,
+    rgb(61, 125, 202) -1.30729px -1.5136px 0px,
+    rgb(61, 125, 202) -0.421592px -1.95506px 0px,
+    rgb(61, 125, 202) 0.567324px -1.91785px 0px,
+    rgb(61, 125, 202) 1.41734px -1.41108px 0px,
+    rgb(61, 125, 202) 1.92034px -0.558831px 0px, rgb(0, 58, 112) 7px 0px 0px,
+    rgb(0, 58, 112) 6.92869px 0.996602px 0px,
+    rgb(0, 58, 112) 6.71622px 1.9729px 0px,
+    rgb(0, 58, 112) 6.36692px 2.909px 0px,
+    rgb(0, 58, 112) 5.8879px 3.78584px 0px,
+    rgb(0, 58, 112) 5.28893px 4.58555px 0px,
+    rgb(0, 58, 112) 4.5822px 5.29183px 0px,
+    rgb(0, 58, 112) 3.78212px 5.8903px 0px,
+    rgb(0, 58, 112) 2.90498px 6.36876px 0px,
+    rgb(0, 58, 112) 1.96865px 6.71747px 0px,
+    rgb(0, 58, 112) 0.992221px 6.92932px 0px,
+    rgb(0, 58, 112) -0.00442571px 7px 0px,
+    rgb(0, 58, 112) -1.00098px 6.92806px 0px,
+    rgb(0, 58, 112) -1.97715px 6.71498px 0px,
+    rgb(0, 58, 112) -2.91303px 6.36508px 0px,
+    rgb(0, 58, 112) -3.78956px 5.88551px 0px,
+    rgb(0, 58, 112) -4.58889px 5.28603px 0px,
+    rgb(0, 58, 112) -5.29472px 4.57885px 0px,
+    rgb(0, 58, 112) -5.89269px 3.77839px 0px,
+    rgb(0, 58, 112) -6.3706px 2.90095px 0px,
+    rgb(0, 58, 112) -6.71871px 1.96441px 0px,
+    rgb(0, 58, 112) -6.92995px 0.98784px 0px,
+    rgb(0, 58, 112) -6.99999px -0.00885142px 0px,
+    rgb(0, 58, 112) -6.92743px -1.00536px 0px,
+    rgb(0, 58, 112) -6.71372px -1.98139px 0px,
+    rgb(0, 58, 112) -6.36324px -2.91705px 0px,
+    rgb(0, 58, 112) -5.88311px -3.79328px 0px,
+    rgb(0, 58, 112) -5.28313px -4.59223px 0px,
+    rgb(0, 58, 112) -4.57551px -5.29762px 0px,
+    rgb(0, 58, 112) -3.77466px -5.89507px 0px,
+    rgb(0, 58, 112) -2.89692px -6.37243px 0px,
+    rgb(0, 58, 112) -1.96016px -6.71995px 0px,
+    rgb(0, 58, 112) -0.983458px -6.93057px 0px,
+    rgb(0, 58, 112) 0.0132771px -6.99999px 0px,
+    rgb(0, 58, 112) 1.00974px -6.92679px 0px,
+    rgb(0, 58, 112) 1.98564px -6.71247px 0px,
+    rgb(0, 58, 112) 2.92107px -6.36139px 0px,
+    rgb(0, 58, 112) 3.797px -5.88071px 0px,
+    rgb(0, 58, 112) 4.59557px -5.28022px 0px,
+    rgb(0, 58, 112) 5.30051px -4.57215px 0px,
+    rgb(0, 58, 112) 5.89746px -3.77094px 0px,
+    rgb(0, 58, 112) 6.37426px -2.89289px 0px,
+    rgb(0, 58, 112) 6.72119px -1.95591px 0px,
+    rgb(0, 58, 112) 6.93119px -0.979076px 0px;
 }
 
 .filters-container {
@@ -254,6 +358,12 @@ body {
   margin: 0 4px;
   font-weight: 700;
   box-shadow: inset 0px 0px 4px #3c3636;
+  text-shadow: rgb(0, 0, 0) 1px 0px 0px, rgb(0, 0, 0) 0.540302px 0.841471px 0px,
+    rgb(0, 0, 0) -0.416147px 0.909297px 0px,
+    rgb(0, 0, 0) -0.989992px 0.14112px 0px,
+    rgb(0, 0, 0) -0.653644px -0.756802px 0px,
+    rgb(0, 0, 0) 0.283662px -0.958924px 0px,
+    rgb(0, 0, 0) 0.96017px -0.279415px 0px;
 }
 
 .load-more {
