Close modal on background click

--- a/src/App.css
+++ b/src/App.css
@@ -368,9 +368,21 @@ body {
 }
 
 .modal-container {
-  height: 500px;
+  height: 65%;
+  max-height: 500px;
   width: 60%;
   background-color: #e3e3e3;
   border-radius: 1rem;
   padding: 15px;
+  position: relative;
+}
+
+.modal-close {
+  position: absolute;
+  top: 5px;
+  right: 22px;
+  border: none;
+  background-color: inherit;
+  cursor: pointer;
+  font-size: 3rem;
 }
