--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,17 @@
   }
 }
 
+@keyframes dropDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -375,6 +386,7 @@ body {
   border-radius: 1rem;
   padding: 15px;
   position: relative;
+  animation: dropDown 0.4s ease-in-out;
 }
 
 .modal-close {
