--- a/src/App.css
+++ b/src/App.css
@@ -379,14 +379,18 @@ body {
 }
 
 .modal-container {
-  height: 65%;
-  max-height: 500px;
+  height: calc(100vh - 200px);
+  max-height: 550px;
   width: 60%;
   background-color: #e3e3e3;
   border-radius: 1rem;
   padding: 15px;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   animation: dropDown 0.4s ease-in-out;
+  overflow-y: scroll;
 }
 
 .modal-close {
@@ -394,7 +398,53 @@ body {
   top: 5px;
   right: 22px;
   border: none;
-  background-color: inherit;
+  background-color: transparent;
   cursor: pointer;
   font-size: 3rem;
+}
+
+.info-box-sprite {
+  background-color: rgba(0, 0, 0, 0.2);
+  min-width: 200px;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  box-sizing: border-box;
+  padding: 20px;
+  position: relative;
+}
+
+.info-box-sprite h4 {
+  font-size: 1.5rem;
+}
+
+.info-box-sprite h3 {
+  font-size: 1.6em;
+  margin-top: 20px;
+}
+
+.modal-sprite-container {
+  width: 130px;
+  height: 130px;
+  margin-top: 15px;
+}
+
+.info-box-sprite .pokeball-icon {
+  top: 46px;
+  right: 18px;
+}
+
+.pokemon-genera {
+  margin-top: 15px;
+}
+
+.info-box-stats {
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 100%;
+  width: 100%;
+  border-radius: 1rem;
+  margin-left: 30px;
+  display: flex;
 }
