--- a/src/App.css
+++ b/src/App.css
@@ -368,7 +368,7 @@ body {
 .modal-background {
   width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.7);
   position: fixed;
   top: 0;
   left: 0;
@@ -387,8 +387,6 @@ body {
   padding: 15px;
   position: relative;
   display: flex;
-  justify-content: center;
-  align-items: center;
   animation: dropDown 0.4s ease-in-out;
   overflow-y: scroll;
 }
@@ -414,6 +412,7 @@ body {
   box-sizing: border-box;
   padding: 20px;
   position: relative;
+  margin: auto;
 }
 
 .info-box-sprite h4 {
