--- a/src/App.css
+++ b/src/App.css
@@ -379,9 +379,9 @@ body {
 }
 
 .modal-container {
-  height: calc(100vh - 200px);
+  height: calc(100vh - 100px);
   max-height: 550px;
-  width: 60%;
+  width: 65%;
   background-color: #e3e3e3;
   border-radius: 1rem;
   padding: 15px;
@@ -403,7 +403,7 @@ body {
 
 .info-box-sprite {
   background-color: rgba(0, 0, 0, 0.2);
-  min-width: 200px;
+  min-width: 250px;
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
@@ -416,27 +416,48 @@ body {
 }
 
 .info-box-sprite h4 {
-  font-size: 1.5rem;
+  font-size: 1.7rem;
 }
 
 .info-box-sprite h3 {
-  font-size: 1.6em;
-  margin-top: 20px;
-}
-
-.modal-sprite-container {
-  width: 130px;
-  height: 130px;
-  margin-top: 15px;
+  font-size: 1.9em;
+  margin-top: 25px;
 }
 
 .info-box-sprite .pokeball-icon {
-  top: 46px;
-  right: 18px;
+  width: 220px;
+  top: 47px;
+  right: 14px;
+}
+
+.modal-sprite-container {
+  width: 170px;
+  height: 170px;
+  margin-top: 15px;
+}
+
+.modal-sprite-container .pokemon-sprite {
+  width: 170px;
+}
+
+.info-text {
+  color: white;
+  font-weight: 700;
+  text-shadow: rgb(0, 0, 0) 1px 0px 0px, rgb(0, 0, 0) 0.540302px 0.841471px 0px,
+    rgb(0, 0, 0) -0.416147px 0.909297px 0px,
+    rgb(0, 0, 0) -0.989992px 0.14112px 0px,
+    rgb(0, 0, 0) -0.653644px -0.756802px 0px,
+    rgb(0, 0, 0) 0.283662px -0.958924px 0px,
+    rgb(0, 0, 0) 0.96017px -0.279415px 0px;
 }
 
 .pokemon-genera {
-  margin-top: 15px;
+  margin-top: 4px;
+  font-size: 1.1rem;
+}
+
+.info-box-sprite .type-list {
+  margin-top: 16px;
 }
 
 .info-box-stats {
