--- a/src/App.css
+++ b/src/App.css
@@ -546,6 +546,10 @@ body {
   text-shadow: 2px 2px 5px #3c3636;
 }
 
+.pokemon-description {
+  min-height: 104px;
+}
+
 .parameter-container {
   margin-top: 8px;
 }
