Make filters mobile responsive

--- a/src/App.css
+++ b/src/App.css
@@ -207,6 +207,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 15px 0;
 }
 
 .filter-item {
